compile_tests/tests/compile-fail/scope_not_declared.stderr
error: unable to find the source file at C:/git/lockjaw/target/tests/compile_tests/../../../compile_tests/tests/compile-fail/scope_not_declared
  --> $DIR/scope_not_declared.rs:22:5
   |
22 | /     "../../../compile_tests/tests/compile-fail/scope_not_declared",
23 | |     ""
   | |______^

error: Unable to resolve path tho current location. Is lockjaw::prologue!() called before using any other lockjaw attributes?
  --> $DIR/scope_not_declared.rs:29:6
   |
29 | impl Foo {
   |      ^^^

error: Unable to resolve path tho current location. Is lockjaw::prologue!() called before using any other lockjaw attributes?
  --> $DIR/scope_not_declared.rs:37:11
   |
37 | pub trait MyComponent {}
   |           ^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> $DIR/scope_not_declared.rs:17:1
   |
17 | / #![allow(dead_code)]
18 | |
19 | | use lockjaw::{component, epilogue, injectable};
20 | |
...  |
43 | | }
44 | | epilogue!(test);
   | |________________^ consider adding a `main` function to `$DIR/tests/compile-fail/scope_not_declared.rs`
